kubernetes/clusters/hyperion/obsidian/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-strawslabs
  namespace: personal
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "obsidian-hyperion.strawslabs.com"
      secretName: obsidian-cert-strawslabs-tls
  rules:
    - host: "obsidian-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian
                port:
                  name: http
